experiment with scope as workspace
