# docs/openapi.yaml
@@ -3,16 +3,11 @@ info:
   title: SWS Demo API
   version: 1.0.0
 paths:
-  /workspace/{workspace}:
+  /:
     get:
-      summary: Collection of workspace-resources (indexes)
-      parameters:
-        - name: workspace
-          in: path
-          required: true
-          description: The name of the workspace to perform the index operation on
+      summary: Collection of indexes
       security:
-        - CognitoUserPool: [ 'https://api.sws.unit.no/scopes/workspace', 'https://api.sws.unit.no/scopes/admin' ]
+        - CognitoUserPool: [ 'sondre', 'fredrik', 'stig', 'marina' ]
       x-amazon-apigateway-integration:
         uri:
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${WorkspaceIndexHandler.Arn}/invocations
@@ -32,14 +27,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Problem'
-  /workspace/{workspace}/{resource+}:
+  /{resource+}:
     post:
       summary: Create workspace/resource and/or add  content to a workspace-resource
       parameters:
-        - name: workspace
-          in: path
-          required: true
-          description: The name of the workspace to perform the index operation on
         - name: resource+
           in: path
           required: true
@@ -47,11 +38,9 @@ paths:
       requestBody:
         required: true
         content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Workspace'
+          application/json
       security:
-        - CognitoUserPool: [ 'https://api.sws.unit.no/scopes/workspace', 'https://api.sws.unit.no/scopes/admin' ]
+        - CognitoUserPool: [ 'sondre', 'fredrik', 'stig', 'marina' ]
       x-amazon-apigateway-integration:
         uri:
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${WorkspaceIndexHandler.Arn}/invocations
@@ -78,16 +67,12 @@ paths:
     get:
       summary: Access a workspace-resource
       parameters:
-        - name: workspace
-          in: path
-          required: true
-          description: The name of the workspace to perform the index operation on
         - name: resource+
           in: path
           required: true
           description: The name of the resource. Can be any valid opensearch index-path and can include slashes
       security:
-        - CognitoUserPool: [ 'https://api.sws.unit.no/scopes/workspace', 'https://api.sws.unit.no/scopes/admin' ]
+        - CognitoUserPool: [ 'sondre', 'fredrik', 'stig', 'marina' ]
       x-amazon-apigateway-integration:
         uri:
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${WorkspaceIndexHandler.Arn}/invocations
@@ -110,16 +95,12 @@ paths:
     put:
       summary: Add or modify content in a workspace-resource
       parameters:
-        - name: workspace
-          in: path
-          required: true
-          description: The name of the workspace to perform the index operation on
         - name: resource+
           in: path
           required: true
           description: The name of the resource. Can be any valid opensearch index-path and can include slashes
       security:
-        - CognitoUserPool: [ 'https://api.sws.unit.no/scopes/workspace', 'https://api.sws.unit.no/scopes/admin' ]
+        - CognitoUserPool: [ 'sondre', 'fredrik', 'stig', 'marina' ]
       x-amazon-apigateway-integration:
         uri:
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${WorkspaceIndexHandler.Arn}/invocations
@@ -146,16 +127,12 @@ paths:
     head:
       summary: workspace-resource
       parameters:
-        - name: workspace
-          in: path
-          required: true
-          description: The name of the workspace to perform the index operation on
         - name: resource+
           in: path
           required: true
           description: The name of the resource. Can be any valid opensearch index-path and can include slashes
       security:
-        - CognitoUserPool: [ 'https://api.sws.unit.no/scopes/workspace', 'https://api.sws.unit.no/scopes/admin' ]
+        - CognitoUserPool: [ 'sondre', 'fredrik', 'stig', 'marina' ]
       x-amazon-apigateway-integration:
         uri:
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${WorkspaceIndexHandler.Arn}/invocations
@@ -178,16 +155,12 @@ paths:
     delete:
       summary:  Deletes a workspace-resource (index)
       parameters:
-        - name: workspace
-          in: path
-          required: true
-          description: The name of the workspace to perform the index operation on
         - name: resource+
           in: path
           required: true
           description: The name of the resource. Can be any valid opensearch index-path and can include slashes
       security:
-        - CognitoUserPool: [ 'https://api.sws.unit.no/scopes/workspace', 'https://api.sws.unit.no/scopes/admin' ]
+        - CognitoUserPool: [ 'sondre', 'fredrik', 'stig', 'marina' ]
       x-amazon-apigateway-integration:
         uri:
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${WorkspaceIndexHandler.Arn}/invocations
@@ -228,12 +201,6 @@ components:
           type: string
     OpenSearchResponse:
       type: object
-    Workspace:
-      description: A workspace is a private opensearch-partition
-      type: object
-      properties:
-        text:
-          type: string
   securitySchemes:
     CognitoUserPool:
       type: apiKey
